--- a/Doctor/Doctor.csproj
+++ b/Doctor/Doctor.csproj
@@ -2187,6 +2187,7 @@
     <Content Include="assets\plugins\global\plugins.bundle.css" />
     <Content Include="assets\plugins\global\plugins.bundle.js" />
     <Content Include="Login.aspx" />
+    <Content Include="SignUp.aspx" />
     <Content Include="Web.config" />
     <Content Include="Dashboard.aspx" />
   </ItemGroup>
@@ -2212,6 +2213,13 @@
     </Compile>
     <Compile Include="Dashboard.aspx.designer.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignUp.aspx.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignUp.aspx.designer.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
